logs/op_pointnet2__ext_furthest_point_sampling/run_07/summary.txt
=== Op Pipeline Round 07 Summary ===
Operator: pointnet2__ext_furthest_point_sampling
Time: 2026-07-06 14:58:11

--- build.log (tail 20) ---
CPack: - Run preinstall target for: opp
CPack: - Install project: opp []
CMake Error at /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/cmake_install.cmake:58 (file):
  file INSTALL cannot find
  "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/binary/ascend310p":
  No such file or directory.
Call Stack (most recent call first):
  /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/cmake_install.cmake:57 (include)


CMake Error at /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/cmake_install.cmake:62 (file):
  file INSTALL cannot find
  "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/op_kernel/binary/config":
  No such file or directory.
Call Stack (most recent call first):
  /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/cmake_install.cmake:57 (include)


CPack Error: Error when generating package: opp
gmake: *** [Makefile:71：package] 错误 1

--- verify.log (tail 20) ---
========== 3. VERIFY: pointnet2__ext_furthest_point_sampling ==========
[WARN] 未找到 AclNNInvocation 目录: /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/AclNNInvocation，跳过验证步骤。

--- test.log (tail 30) ---
    subprocess.run(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/subprocess.py", line 526, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 88, in <module>
    ok = test()
  File "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/test_pointnet2__ext_furthest_point_sampling.py", line 58, in test
    mod = load_inline(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1723, in load_inline
    return _jit_compile(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1798, in _jit_compile
    _write_ninja_file_and_build_library(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 1926, in _write_ninja_file_and_build_library
    _run_ninja_build(
  File "/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/utils/cpp_extension.py", line 2225, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error building extension 'fps_test_ops': [1/2] c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /home/orange/.cache/torch_extensions/py310_cpu/fps_test_ops/main.cpp -o main.o 
FAILED: [code=1] main.o 
c++ -MMD -MF main.o.d -DTORCH_EXTENSION_NAME=fps_test_ops -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\"_gcc\" -DPYBIND11_STDLIB=\"_libstdcpp\" -DPYBIND11_BUILD_ABI=\"_cxxabi1011\" -I/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/torch/csrc/api/include -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/TH -isystem /home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch/include/THC -isystem /home/orange/miniconda3/envs/torch_npu/include/python3.10 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -std=c++17 -c /home/orange/.cache/torch_extensions/py310_cpu/fps_test_ops/main.cpp -o main.o 
/home/orange/.cache/torch_extensions/py310_cpu/fps_test_ops/main.cpp: In function ‘void pybind11_init_fps_test_ops(pybind11::module_&)’:
/home/orange/.cache/torch_extensions/py310_cpu/fps_test_ops/main.cpp:23:60: error: ‘farthest_point_sample’ was not declared in this scope
   23 | m.def("farthest_point_sample", torch::wrap_pybind_function(farthest_point_sample), "farthest_point_sample");
      |                                                            ^~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.

[ERROR] 2026-07-06-14:58:10 (PID:993208, Device:-1, RankID:-1) ERR99999 UNKNOWN applicaiton exception

--- status ---
BUILD_OK
VERIFY_OK
TEST_ERROR
